# LotR-SDK

./: .gitignore  README.md  design.md  pyproject.toml
src/lord_of_the_rings/: LordOfTheRings.py  __init__.py  lord_of_the_rings.py
tests/: lord_of_the_rings_test.py  test.py
